fix vertical alignment of river gauge table header

--- a/root/static/less/table.less
+++ b/root/static/less/table.less
@@ -42,6 +42,5 @@
 
   th.river-gauge, td.river-gauge {
     width: 36px;
-    padding-bottom: 0px;
   }
 }
